spacing fixes

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -47,7 +47,7 @@
 
     .sidebar {
         grid-column: 1/2;
-        width: 400px;
+        width: 300px;
         height: 100%;
         float: right;
         position: fixed;
@@ -66,13 +66,15 @@
 
     .main-discover {
         display: grid;
-        grid-template-columns: 400px auto;
-        grid-gap: 2rem;
+        grid-template-columns: 300px auto;
+        grid-gap: 1rem;
 
     }
 
     .main-content {
         grid-column: 2/3;
+        margin-right: 0;
+        margin-left: 0;
         padding: 1rem;
         height: auto;
     }
